--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "babel-eslint": "^7.2.1",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
     "jest": "^19.0.2",
     "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.2",
     "redux-saga": "^0.14.5",
     "webpack": "^2.3.3"
   }
